--- a/web/src/components/buttons/professional-button/professional-button.css
+++ b/web/src/components/buttons/professional-button/professional-button.css
@@ -1,55 +1,46 @@
 .professional-button {
-    display: flex;
-    align-items: center;
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .professional-button-selected {
-    background-color: black;
-    color: white;
-  }
-  
-  .image {
-    width: 80px;
-    height: 80px;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-  
-  .title {
-    font-weight: bold;
-    font-size: 1.2rem;
-    margin-bottom: 5px;
-  }
-  
-  .subtitle {
-    font-size: 0.9rem;
-    margin-bottom: 5px;
-  }
-  
-  .right-button {
-    background-color: black;
-    color: white;
-    border-radius: 10px;
-    padding: 5px 10px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-  }
-  
-  .right-button-title {
-    font-size: 0.9rem;
-    margin: 0;
-    margin-right: 5px;
-  }
-  
-  .right-button-selected {
-    background-color: white;
-    color: black;
-    border: 1px solid black;
-  }
+  justify-content: space-between;
+  height: 80px;
+  align-items: center;
+}
+
+.pb-title-block {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: start;
+}
+
+.pb-left-block {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.pb-image {
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  padding: 0 !important;
+}
+
+.pb-title {
+  font-size: 24px;
+}
+
+.pb-subtitle {
+  font-size: 12px;
+  padding: 0px !important;
+  padding-inline: 10px !important;
+  border-radius: 10px !important;
+  align-items: center;
+
+}
+
+.pb-right-button-title {
+  font-size: 12px;
+  padding: 1px !important;
+  padding-inline: 12px !important;
+  align-items: center;
+  font-size: 15px;
+}
