--- a/web/src/components/buttons/professional-button/professional-button.css
+++ b/web/src/components/buttons/professional-button/professional-button.css
@@ -2,6 +2,8 @@
   justify-content: space-between;
   height: 80px;
   align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
 .pb-title-block {
