schedule overall update (nothing changed)

--- a/web/src/pages/schedule/schedule-add/confirmed-tab/confirmed-tab.css
+++ b/web/src/pages/schedule/schedule-add/confirmed-tab/confirmed-tab.css
@@ -17,8 +17,9 @@
 }
 
 .ct-text-box {
-
-    width: calc(100% - 80px);
+    display: grid;
+    gap: 20px;
+    width: calc(100%);
 }
 
 .confirmed-tab-title {
