--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -7,12 +7,12 @@
 
 html {
     background-color: var(--primary);
-    min-height: 100vh;
+    /*min-height: 100vh;*/
 }
 
 #root {
 
-    margin-inline: 15px;
+    margin-inline: 10px;
     margin-block: 20px;
 }
 
