--- a/web/src/pages/service/service-form/style.css
+++ b/web/src/pages/service/service-form/style.css
@@ -1,6 +1,4 @@
 .s-form {
-  display: grid;
-  justify-content: center;
 }
 
 .s-form-header {
@@ -22,13 +20,15 @@
 }
 
 .s-form-tab-list {
+  flex-wrap: wrap;
   gap: 10px;
   margin-top: 20px;
   margin-bottom: 10px;
+  justify-content: center;
 }
 
 .s-form-state-tab {
-  gap: 10px;
+  gap: 5px;
   margin-top: 10px;
 }
 
