--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -98,3 +98,12 @@ html {
 .flex-div {
     display: flex;
 }
+
+.prevent-select {
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
+}
