--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -1,100 +1,24 @@
-:root {
-    --primary: #1E1E1E;
-    --secondary: #C6AC8F;
-    --accent-dark: #5E503F;
-    --accent-light: #EAE0D5;
+.sched-arrow {
+    height: 15px;
+    width: 15px;
 }
 
-html {
-    background-color: var(--primary);
-    min-height: 100vh;
+.up {
+    rotate: 90deg;
 }
 
-#root {
-
-    margin-inline: 15px;
-    margin-block: 20px;
+.down {
+    rotate: -90deg;
 }
 
-/* Button */
-
-.button {
-    box-sizing: border-box;
-    background-color: var(--secondary);
-    border-radius: 5px;
-    display: flex;
-    transition: 200ms;
+.right {
+    rotate: 180deg;
 }
 
-.button.selected {
-    background-color: var(--accent-dark);
-    opacity: .8;
-}
-
-.button.inactive {
-    opacity: .2;
-}
-
-/* Button-text */
-.button-text {
-    color: var(--accent-dark);
-}
-
-
-.button-text.selected {
-    color: var(--secondary);
-}
-
-
-.button-text.deactivated {
-    color: var(--secondary);
-}
-
-/* Text-related */
-
-.title {
-    font-size: 22px;
-    color: var(--accent-light);
-}
-
-.subtitle {
-    font-size: 14px;
-    color: var(--secondary);
-}
-
-/* Input-related */
-
-.input {
-    width: 100%;
-    height: 40px;
-    border-radius: 5px;
-    border: none;
-    padding-left: 10px;
-    background-color: var(--secondary);
-    color: var(--primary);
-    font-size: 18px;
-
+input {
+    all: unset;
 }
 
 ::placeholder {
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: var(--accent-dark);
-    opacity: 0.5;
-    /* Firefox */
-}
-
-:-ms-input-placeholder {
-    /* Internet Explorer 10-11 */
-    color: var(--accent-dark);
-}
-
-::-ms-input-placeholder {
-    /* Microsoft Edge */
-    color: var(--accent-dark);
-}
-
-/* generic classes designs */
-
-.flex-div {
-    display: flex;
+    color: #212529;
 }
