--- a/src/Forms/group-form/group-form.css
+++ b/src/Forms/group-form/group-form.css
@@ -1,7 +1,9 @@
+/* Group Form */
 .group-form {
     background-color: #CED4DA;
 }
 
+/* Banner */
 .gf-banner {
     background: linear-gradient(284deg, #212529 0%, rgba(0, 0, 0, 0.00) 100%);
     height: 50vw;
@@ -10,11 +12,13 @@
     align-items: center;
 }
 
+/* Banner Placeholder */
 .gf-banner-placeholder {
     height: 30px;
     width: 30px;
 }
 
+/* Profile */
 .gf-profile {
     position: absolute;
     display: flex;
@@ -29,60 +33,71 @@
     border-radius: 35px;
 }
 
+/* Profile Placeholder */
 .gf-profile-placeholder {
     height: 30px;
     width: 30px;
 }
 
+/* Title Block */
 .gf-title-block {
     background-color: #DEE2E6;
     padding-top: 15px;
     padding-bottom: 5px;
 }
 
+/* Title Input */
 .gf-title-input {
     font-size: 20px;
     color: #212529;
     padding-left: 10px;
 }
 
+/* Group Type Selector Title */
 .gf-group-type-selector-title {
     color: #212529;
     font-size: 12px;
     padding-left: 10px;
 }
 
+/* Data Block */
 .gf-data-block {
     background-color: #CED4DA;
     padding-inline: 10px;
     min-height: calc(100% + 40px);
 }
 
+/* Location Block */
 .gf-location-block {
     display: flex;
     align-items: center;
     padding-block: 17px;
 }
 
+/* Location Icon */
 .gf-location-icon {
     width: 20px;
     height: 20px;
     margin-left: 2px;
 }
 
+/* Location Input */
 .gf-location-input {
     padding-left: 5px;
 }
 
+/* Bottom Columns */
 .gf-bottom-columns {
     display: flex;
     gap: 10px;
 }
 
+/* Day List */
 .gf-day-list {
     margin-top: -5px;
 }
 
+/* Day List Item */
 .gf-day-list-item {
     background-color: #DEE2E6;
     border-radius: 2px;
@@ -94,6 +109,7 @@
     text-align: center;
 }
 
+/* Selector */
 .gf-selector {
     display: flex;
     padding-left: 10px;
@@ -105,12 +121,14 @@
     justify-content: space-between;
 }
 
+/* Selector Text */
 .gf-selector-text {
     font-size: 12px;
     color: #212529;
     opacity: .8;
 }
 
+/* Image Group */
 .gf-image-group {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -118,6 +136,7 @@
     padding-bottom: 90px;
 }
 
+/* Image Add */
 .gf-image-add {
     height: 80px;
     width: 120px;
@@ -128,11 +147,13 @@
     border-radius: 2px;
 }
 
+/* Image Add Icon */
 .gf-image-add-icon {
     height: 30px;
     width: 30px;
 }
 
+/* Image */
 .gf-image {
     height: 80px;
     width: 120px;
@@ -140,6 +161,7 @@
     border-radius: 2px;
 }
 
+/* Confirm Tab */
 .gf-confirm-tab {
     position: fixed;
     height: 70px;
@@ -155,16 +177,19 @@
     padding-inline: 10px;
 }
 
+/* Confirm Tab Title */
 .gf-confirm-tab-title {
     font-size: 16px;
     color: #212529;
 }
 
+/* Confirm Tab Subtitle */
 .gf-confirm-tab-subtitle {
     font-size: 12px;
     color: #212529;
 }
 
+/* Confirm Button */
 .gf-confirm-button {
     font-size: 16px;
     background-color: #212529;
@@ -174,11 +199,13 @@
     border-radius: 5px;
 }
 
+/* Tab */
 .gf-tab {
     background-color: #CED4DA;
     min-height: 100vh;
 }
 
+/* Header */
 .gf-header {
     background-color: #DEE2E6;
     height: 64px;
@@ -189,25 +216,28 @@
     padding-right: 15px;
 }
 
+/* Header Title */
 .gf-header-title {
     font-size: 16px;
     color: #212529;
     opacity: .8;
 }
 
+/* Add Service Button */
 .gf-add-service-button {
     height: 26px;
     width: 26px;
     opacity: .8;
 }
 
+/* Add Professional Button */
 .gf-add-professional-button {
     height: 26px;
     width: 26px;
     opacity: .8;
-
 }
 
+/* Sub Header */
 .gf-sub-header {
     display: flex;
     gap: 5px;
@@ -215,6 +245,7 @@
     margin-block: 10px;
 }
 
+/* Sub Header Left */
 .gf-sub-header-left {
     background-color: #DEE2E6;
     height: 25px;
@@ -225,6 +256,7 @@
     align-items: center;
 }
 
+/* Sub Header Button */
 .gf-sub-header-button {
     background-color: #212529;
     color: #F8F9FA;
@@ -235,6 +267,7 @@
     font-size: 12px;
 }
 
+/* List */
 .gf-list {
     display: flex;
     flex-direction: column;
@@ -243,6 +276,7 @@
     padding-bottom: 80px;
 }
 
+/* Button */
 .gf-button {
     height: 40px;
     position: relative;
@@ -254,21 +288,25 @@
     border-radius: 2px;
 }
 
+/* Selected Button */
 .gf-button.selected {
     outline: #212529 .5px solid;
 }
 
+/* Button Title */
 .gf-button-title {
     font-size: 14px;
     color: black;
 }
 
+/* Button Subtitle */
 .gf-button-subtitle {
     font-size: 11px;
     color: #212529;
     opacity: .8;
 }
 
+/* Selection Circle */
 .selection-circle {
     top: 5px;
     right: 5px;
@@ -282,18 +320,20 @@
     align-items: center;
 }
 
+/* Selected Selection Circle */
 .selection-circle.selected {
     background-color: #212529;
 }
 
+/* Selection Inner Circle */
 .selection-inner-circle {
     height: 6px;
     width: 6px;
     background-color: #DEE2E6;
     border-radius: 3px;
-
 }
 
+/* Service Edit Button */
 .gf-service-edit-button {
     font-size: 15px;
     color: #F8F9FA;
@@ -309,6 +349,7 @@
     height: 35px;
 }
 
+/* Day Carrousel */
 .gf-day-carrousel {
     display: flex;
     overflow-x: auto;
@@ -319,10 +360,12 @@
     padding-inline: 95px;
 }
 
+/* Hide Scrollbar */
 .gf-day-carrousel::-webkit-scrollbar {
     display: none;
 }
 
+/* Day Carrousel Item */
 .gf-day-carrousel-item {
     height: 40px;
     width: 85px;
@@ -336,10 +379,12 @@
     flex-shrink: 0;
 }
 
+/* Selected Day Carrousel Item */
 .gf-day-carrousel-item.selected {
     outline: #212529 .5px solid;
 }
 
+/* Professional List */
 .gf-professional-list {
     display: flex;
     flex-direction: column;
@@ -347,5 +392,4 @@
     padding-inline: 10px;
     padding-bottom: 80px;
     margin-top: 10px;
-
 }
