--- a/src/Components/buttons/group-button/group-button.css
+++ b/src/Components/buttons/group-button/group-button.css
@@ -2,19 +2,24 @@
     background-color: #DEE2E6;
     height: 190px;
     width: 150px;
+    position: relative;
     border-radius: 5px;
 }
 
 .gb-banner {
     height: 80px;
     width: 100%;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 .gb-title {
     font-size: 18px;
     padding-top: 5px;
     padding-inline: 5px;
+    max-width: 110px;
 }
+
 
 .gb-day-selector {
     display: flex;
@@ -27,4 +32,36 @@
     font-size: 14px;
     color: #212529;
     opacity: .8;
+}
+
+.gb-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 7px;
+}
+
+.gb-time {
+    font-size: 14px;
+    color: #212529;
+    opacity: .8;
+}
+
+.gb-rating-block {
+    display: flex;
+    gap: 2px;
+}
+
+.gb-star {
+    height: 8px;
+    width: 8px;
+}
+
+.gb-profile {
+    position: absolute;
+    top: 40px;
+    right: 5px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
 }
