group button shadow

--- a/src/Components/buttons/group-button/group-button.css
+++ b/src/Components/buttons/group-button/group-button.css
@@ -4,6 +4,7 @@
     width: 150px;
     position: relative;
     border-radius: 5px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .gb-banner {
@@ -64,4 +65,9 @@
     width: 50px;
     height: 50px;
     border-radius: 50px;
+}
+
+.gbds {
+    margin-inline: 3px;
+    opacity: .8;
 }
