--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -18,6 +18,43 @@
     padding-bottom: 20px;
 }
 
+.h-searchbar-block {
+    background-color: #DEE2E6;
+    border-radius: 20px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-inline: 10px;
+    padding-block: 5px;
+}
+
+.h-search-icon {
+    height: 25px;
+    width: 25px;
+
+}
+
+.h-search-input {
+    width: 100%;
+    font-size: 21px;
+}
+
+.h-filter-icon {
+    height: 20px;
+    width: 20px;
+
+}
+
+.h-user-icon {
+    height: 48px;
+    width: 48px;
+    border-radius: 24px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
 .h-banner-block {
     padding-top: 10px;
     padding-inline: 10px;
@@ -32,10 +69,18 @@
     border-radius: 10px;
 }
 
+.hb-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 25px;
+}
+
+.hb-sort-icon {
+    height: 20px;
+    width: 20px;
+
+}
+
 .hb-list-title {
     font-size: 17px;
-}
-.gbds{
-    margin-inline: 3px;
-    opacity: .8;
 }
