--- a/src/Components/buttons/group-button/group-button.css
+++ b/src/Components/buttons/group-button/group-button.css
@@ -8,6 +8,7 @@
 }
 
 .gb-banner {
+    object-fit: cover;
     height: 80px;
     width: 100%;
     border-top-right-radius: 10px;
@@ -59,6 +60,7 @@
 }
 
 .gb-profile {
+    object-fit: cover;
     position: absolute;
     top: 40px;
     right: 5px;
