--- a/src/Pages/group-page/group-page.css
+++ b/src/Pages/group-page/group-page.css
@@ -1,93 +1,97 @@
 .group-page {
-    background-color: #CED4DA;
+  background-color: #ced4da;
 }
 
 .gp-banner {
-    height: 180px;
-    width: 100%;
+  height: 180px;
+  width: 100%;
 }
 
 .gp-title-block {
-    background-color: #DEE2E6;
-    padding-top: 15px;
-    padding-bottom: 5px;
-    padding-inline: 10px;
+  background-color: #dee2e6;
+  padding-top: 15px;
+  padding-bottom: 5px;
+  padding-inline: 10px;
 }
 
 .gp-title {
-    font-size: 20px;
-    color: #212529;
+  font-size: 20px;
+  color: #212529;
 }
 
 .gp-type {
-    color: #212529;
-    opacity: .8;
-    font-size: 12px;
+  color: #212529;
+  opacity: 0.8;
+  font-size: 12px;
 }
 
 .gp-header {
-    padding-inline: 10px;
+  padding-inline: 10px;
 }
 
 .gp-block {
-    padding-left: 5px;
-    padding-top: 5px;
-    display: flex;
-    gap: 10px;
+  padding-left: 5px;
+  padding-top: 5px;
+  display: flex;
+  gap: 10px;
 }
 
 .gp-rating-block {
-    background-color: #F8F9FA;
-    border-radius: 10px;
-    padding-block: 3px;
-    padding-inline: 5px;
-    display: flex;
-    gap: 5px;
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  padding-block: 3px;
+  padding-inline: 5px;
+  display: flex;
+  gap: 5px;
 }
 
 .gp-rating-icon {
-    height: 10px;
-    width: 10px;
+  height: 10px;
+  width: 10px;
 }
 
 .gp-rating {
-    font-size: 12px;
-    color: #212529;
+  font-size: 12px;
+  color: #212529;
 }
 
 .gp-comment {
-    background-color: #F8F9FA;
-    border-radius: 10px;
-    padding-block: 3px;
-    padding-inline: 5px;
-    font-size: 12px;
-    color: #212529;
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  padding-block: 3px;
+  padding-inline: 5px;
+  font-size: 12px;
+  color: #212529;
 }
 
 .gp-distance {
-    padding-left: 5px;
-    font-size: 12px;
-    color: #212529;
-    opacity: .8;
-    padding-bottom: 10px;
-    padding-top: 5px;
+  padding-left: 5px;
+  font-size: 12px;
+  color: #212529;
+  opacity: 0.8;
+  padding-bottom: 10px;
+  padding-top: 5px;
 }
 
 .gp-bottom-columns {
-    display: flex;
-    gap: 10px;
-    padding-left: 10px;
-    padding-right: 15px;
-    padding-top: 10px;
+  display: flex;
+  gap: 10px;
+  padding-left: 10px;
+  padding-right: 15px;
+  padding-top: 10px;
 }
 
 .gp-right-column {
-    width: 100%;
+  width: 100%;
 }
 
 .gf-image-group {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 5px;
-    padding-bottom: 90px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 5px;
+  padding-bottom: 90px;
+}
+.carousel-item-text {
+  font-size: 14px;
+  color: #212529;
 }
