--- a/src/Pages/group-page/group-page.css
+++ b/src/Pages/group-page/group-page.css
@@ -91,7 +91,51 @@
   grid-gap: 5px;
   padding-bottom: 90px;
 }
+
 .carousel-item-text {
   font-size: 14px;
   color: #212529;
+}
+
+.gp-service-tab {
+  background-color: #ced4da;
+}
+.gp-professional-tab {
+  background-color: #ced4da;
+}
+.gp-list {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding-inline: 10px;
+  padding-bottom: 90px;
+  min-height: calc(100vh - 215px);
+  margin-top: 10px;
+}
+.gp-time-row {
+  display: flex;
+  gap: 5px;
+}
+
+.gpt-row-item {
+  flex: 1;
+}
+.gp-time-button {
+  height: 40px;
+  width: 85px;
+  background-color: #dee2e6;
+  border-radius: 2px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.gp-time-button.selected {
+  outline: #212529 0.5px solid;
+}
+.gpt-title {
+  font-size: 12px;
+  color: #212529;
+  opacity: 0.8;
+  padding-left: 5px;
 }
