--- a/src/Forms/group-form/group-form.css
+++ b/src/Forms/group-form/group-form.css
@@ -107,7 +107,9 @@
     display: flex;
     gap: 10px;
 }
-
+.gf-right-column{
+    width: 100%;
+}
 /* Day List */
 .gf-day-list {
     margin-top: -5px;
@@ -288,6 +290,7 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    padding-top: 10px;
     padding-inline: 10px;
     padding-bottom: 80px;
 }
