--- a/src/Pages/group-page/group-page.css
+++ b/src/Pages/group-page/group-page.css
@@ -7,6 +7,15 @@
   width: 100%;
   object-fit: cover;
 }
+.gp-profile {
+  position: absolute;
+  height: 70px;
+  width: 70px;
+  right: 10px;
+  top: 130px;
+  border-radius: 40px;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+}
 
 .gp-title-block {
   background-color: #dee2e6;
@@ -71,7 +80,7 @@
   color: #212529;
   opacity: 0.8;
   padding-bottom: 10px;
-  padding-top: 5px;
+  padding-top: 10px;
 }
 
 .gp-bottom-columns {
