--- a/src/Components/buttons/link-button/link-button.css
+++ b/src/Components/buttons/link-button/link-button.css
@@ -1,16 +1,18 @@
 .link-button {
-    display: flex;
-    padding-left: 10px;
-    padding-right: 5px;
-    padding-block: 3px;
-    margin-block: 10px;
-    background-color: #DEE2E6;
-    border-radius: 2px;
-    justify-content: space-between;
+  display: flex;
+  padding-left: 10px;
+  padding-right: 5px;
+  margin-block: 10px;
+  height: 20px;
+  background-color: #dee2e6;
+  border-radius: 2px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .lb-title {
-    font-size: 12px;
-    color: #212529;
-    opacity: .8;
+  padding-top: 2px;
+  font-size: 14px;
+  color: #212529;
+  opacity: 0.8;
 }
