--- a/src/Components/buttons/dropdown-button/dropdown-button.css
+++ b/src/Components/buttons/dropdown-button/dropdown-button.css
@@ -1,40 +1,40 @@
 .dropdown-button {
-    display: flex;
-    position: relative;
-    padding-block: 3px;
-    margin-block: 10px;
-    width: 80px;
-    background-color: #DEE2E6;
-    border-radius: 2px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  position: relative;
+  padding-block: 3px;
+  margin-block: 10px;
+  width: 100px;
+  background-color: #dee2e6;
+  border-radius: 2px;
+  justify-content: center;
+  align-items: center;
 }
 
 .ddb-title {
-    font-size: 12px;
-    color: #212529;
-    opacity: .8;
-    padding-right: 10px;
+  font-size: 14px;
+  color: #212529;
+  opacity: 0.8;
+  padding-right: 10px;
 }
 
 .ddb-icon.sched-arrow {
-    position: absolute;
-    right: 5px;
-    top: 3px;
+  position: absolute;
+  right: 5px;
+  top: 3px;
 }
 
 .ddb-list {
-    margin-top: -5px;
+  margin-top: -5px;
 }
 
 .ddb-item {
-    width: 80px;
-    background-color: #DEE2E6;
-    border-radius: 2px;
-    margin-block: 1px;
-    font-size: 12px;
-    color: #212529;
-    opacity: .8;
-    padding-block: 3px;
-    text-align: center;
+  width: 100px;
+  background-color: #dee2e6;
+  border-radius: 2px;
+  margin-block: 1px;
+  font-size: 14px;
+  color: #212529;
+  opacity: 0.8;
+  padding-block: 3px;
+  text-align: center;
 }
