--- a/src/Components/banner/group-banner/group-banner.css
+++ b/src/Components/banner/group-banner/group-banner.css
@@ -1,9 +1,9 @@
 .group-banner {
-  background: linear-gradient(284deg, #212529 0%, rgba(0, 0, 0, 0) 100%);
   height: 50vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .group-banner-image {
@@ -14,4 +14,17 @@
 .group-banner-placeholder {
   height: 30px;
   width: 30px;
+}
+.gp-return {
+  position: absolute;
+  top: 5px;
+  left: 0;
+  background: radial-gradient(#DEE2E6, #00000000 80%);
+  border-radius: 5px;
+}
+.gp-blur {
+  background: linear-gradient(315deg, rgba(34, 38, 42, 0.75), #00000000 75%);
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
