--- a/src/Pages/group-page/group-page.css
+++ b/src/Pages/group-page/group-page.css
@@ -12,7 +12,7 @@
   height: 70px;
   width: 70px;
   right: 10px;
-  top: 130px;
+  top: calc(50vw - 50px);
   border-radius: 40px;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
@@ -84,8 +84,6 @@
 }
 
 .gp-bottom-columns {
-  display: flex;
-  gap: 10px;
   padding-left: 10px;
   padding-right: 15px;
   padding-top: 10px;
@@ -148,9 +146,4 @@
   color: #212529;
   opacity: 0.8;
   padding-left: 5px;
-}
-.gp-return-button {
-  position: absolute;
-  top: 5px;
-  left: 0;
 }
