SCHED-8 schedule page css update

--- a/src/Pages/schedule-page/schedule-page.css
+++ b/src/Pages/schedule-page/schedule-page.css
@@ -21,3 +21,11 @@
   margin-top: 10px;
   margin-left: 10px;
 }
+.sp-list {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.sp-input {
+  margin-inline: 10px;
+}
