SCHED-9 admin error fixed (wrong commit)

--- a/src/Components/buttons/icon-button/icon-button.css
+++ b/src/Components/buttons/icon-button/icon-button.css
@@ -10,14 +10,14 @@
     gap: 12px;
 }
 
-.ib-icon {
+.icb-icon {
     height: 55px;
     width: 55px;
     padding-top: 10px;
 
 }
 
-.ib-title {
+.icb-title {
     font-size: 18px;
     color: #212529;
     text-align: center;
