SCHED-9 read message: i accidentally sent all commits in the last one, so... sorry future me ;)

--- a/src/Forms/professional-form/professional-form.css
+++ b/src/Forms/professional-form/professional-form.css
@@ -7,8 +7,16 @@
   }
 }
 
-.pf-warning-message {
+.pf-warning {
   color: red;
+  opacity: 0.6;
+  text-align: center;
+  width: 100px;
+  font-size: 12px;
+  animation: fadeOut 2s 1s forwards;
+}
+.pf-message {
+  color: blue;
   opacity: 0.6;
   text-align: center;
   width: 100px;
