--- a/src/Components/buttons/icon-button/icon-button.css
+++ b/src/Components/buttons/icon-button/icon-button.css
@@ -1,24 +1,19 @@
 .icon-button {
-    height: 120px;
-    width: 100px;
-    border-radius: 5px;
-    background-color: #DEE2E6;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 12px;
+  height: 40px;
+  display: flex;
+  gap: 10px;
+  background: var(--platinum);
+  align-items: center;
+  border-radius: 5px;
 }
-
-.icb-icon {
-    height: 55px;
-    width: 55px;
-    padding-top: 10px;
-
+.ib-icon {
+  height: 26px;
+  width: 26px;
+  padding-left: 10px;
+  opacity: 0.8;
 }
-
-.icb-title {
-    font-size: 18px;
-    color: #212529;
-    text-align: center;
+.ib-title {
+  font-size: 22px;
+  color: var(--eerieBlack);
+  opacity: 0.8;
 }
