--- a/src/Components/loading/home-page-loading/home-page-loading.css
+++ b/src/Components/loading/home-page-loading/home-page-loading.css
@@ -4,12 +4,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100svh;
   }
   
   .spinner {
     border: 1px solid rgba(255, 255, 255, 0.3);
-    border-top: 1px solid #343A40;
+    border-top: 1px solid #343a40;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -17,7 +17,11 @@
   }
   
   @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
   
