SCHED-20 styles are now organized

--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -1,32 +1,6 @@
-.sched-arrow {
-  height: 15px;
-  width: 15px;
-}
-
-.up {
-  rotate: 90deg;
-}
-
-.down {
-  rotate: -90deg;
-}
-
-.right {
-  rotate: 180deg;
-}
-
-.left {
-  rotate: 0deg;
-}
-
-.return-button {
-  height: 40px;
-  right: 40px;
-  opacity: 0.8;
-}
-
 input {
   all: unset;
+  font-family: "Regular";
 }
 
 textarea {
