--- a/src/Components/banners/group-banner/group-banner.css
+++ b/src/Components/banners/group-banner/group-banner.css
@@ -40,6 +40,7 @@
   background-color: #dee2e6;
   filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
   border-radius: 35px;
+  z-index: 1;
 }
 
 .gp-profile-image {
