--- a/src/Components/carousels/carousel/carousel.css
+++ b/src/Components/carousels/carousel/carousel.css
@@ -3,6 +3,8 @@
   display: flex;
   gap: 5px;
   padding-inline: 20px;
+  padding-block: 1px;
+  margin-bottom: 10px;
   margin-top: 10px;
 }
 
@@ -13,11 +15,12 @@
 .carousel-item,
 .carousel-item-selected {
   height: 50px;
-  width: 100px;
+  width: 110px;
   background: var(--platinum);
   border-radius: 2px;
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   justify-content: center;
   align-items: center;
 }
