--- a/src/Components/headers/generic-header/generic-header.css
+++ b/src/Components/headers/generic-header/generic-header.css
@@ -1,12 +1,17 @@
-.small-header {
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--platinum);
-  }
-  .sh-title {
-    font-size: 22px;
-    color: var(--eerieBlack);
-  }
-  
+.generic-header {
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--platinum);
+}
+.gh-title {
+  font-size: 22px;
+  color: var(--eerieBlack);
+}
+.gh-icon {
+  height: 26px;
+  width: 26px;
+  position: absolute;
+  right: 10px;
+}
