--- a/src/Components/headers/sub-header/sub-header.css
+++ b/src/Components/headers/sub-header/sub-header.css
@@ -5,7 +5,7 @@
   margin-block: 10px;
 }
 
-.sub-header-left {
+.sub-header-title {
   background: var(--platinum);
   height: 25px;
   width: 100%;
@@ -18,11 +18,12 @@
 
 .sub-header-button {
   background: var(--eerieBlack);
-  color: var(--seasalt);
+  color: var(--platinum);
   width: 135px;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 16px;
+  border-radius: 2px;
 }
