SCHED-20 icon button desing fix

--- a/src/Components/buttons/icon-button/icon-button.css
+++ b/src/Components/buttons/icon-button/icon-button.css
@@ -6,13 +6,13 @@
   align-items: center;
   border-radius: 5px;
 }
-.ib-icon {
+.icb-icon {
   height: 26px;
   width: 26px;
   padding-left: 10px;
   opacity: 0.8;
 }
-.ib-title {
+.icb-title {
   font-size: 22px;
   color: var(--eerieBlack);
   opacity: 0.8;
