--- a/src/Components/popups/bottom-popup/bottom-popup.css
+++ b/src/Components/popups/bottom-popup/bottom-popup.css
@@ -10,7 +10,6 @@
 
 .bottom-popup,
 .bottom-popup-hide {
-  background: var(--platinum);
   padding-top: 15px;
   padding-bottom: 10px;
   padding-inline: 10px;
@@ -31,17 +30,46 @@
 }
 
 .bottom-popup-expand {
+  padding-top: 15px;
+  padding-bottom: 10px;
+  padding-inline: 10px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  box-sizing: border-box;
+
+  background: var(--frenchGray);
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .bp-top-block {
 }
 
 .bp-top-text {
+  font-size: 20px;
+  color: var(--eerieBlack);
+  text-align: center;
+  padding-bottom: 5px;
 }
 
 .bp-bottom-text {
+  font-size: 12px;
+  color: var(--onyx);
+  opacity: 0.8;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 12px;
 }
 .bp-bottom-block {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+  padding-top: 10px;
+}
+
+.bp-bottom-block-single {
   display: flex;
   align-items: end;
   justify-content: space-between;
@@ -52,7 +80,7 @@
 
 .bp-title {
   color: var(--eerieBlack);
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .bp-subtitle {
