--- a/src/Components/buttons/bottom-button/bottom-button.css
+++ b/src/Components/buttons/bottom-button/bottom-button.css
@@ -1,4 +1,5 @@
-.bottom-button {
+.bottom-button,
+.bottom-button-hide {
   position: absolute;
   bottom: 10px;
   left: 10px;
@@ -11,4 +12,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.bottom-button-hide {
+  bottom: -35px;
 }
