--- a/src/Components/buttons/small-item-button/small-icon-button.css
+++ b/src/Components/buttons/small-item-button/small-icon-button.css
@@ -3,8 +3,10 @@
 .small-icon-button-select {
   background: var(--frenchGray);
   height: 20px;
-  width: 100px;
+  min-width: 100px;
+  padding-inline: 2px;
   border-radius: 2px;
+  box-sizing: border-box;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   gap: 5px;
