--- a/src/Components/headers/sub-header/sub-header.css
+++ b/src/Components/headers/sub-header/sub-header.css
@@ -2,15 +2,15 @@
   display: flex;
   gap: 5px;
   padding-inline: 10px;
-  margin-block: 10px;
+  padding-top: 10px;
 }
 
 .sub-header-title {
   background: var(--platinum);
-  height: 25px;
+  height: 35px;
   width: 100%;
   border-radius: 2px;
-  font-size: 16px;
+  font-size: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,11 +19,12 @@
 .sub-header-button {
   background: var(--eerieBlack);
   color: var(--platinum);
-  width: 135px;
+  width: 200px;
+  flex-shrink: 0;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 16px;
-  border-radius: 2px;
+  font-size: 18px;
+  border-radius: 5px;
 }
