--- a/src/Components/popups/bottom-popup/bottom-popup.css
+++ b/src/Components/popups/bottom-popup/bottom-popup.css
@@ -44,9 +44,6 @@
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.bp-top-block {
-}
-
 .bp-top-text {
   font-size: 20px;
   color: var(--eerieBlack);
@@ -64,18 +61,16 @@
 }
 .bp-bottom-block {
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   justify-content: space-between;
   padding-top: 10px;
 }
 
 .bp-bottom-block-single {
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   justify-content: space-between;
   height: 100%;
-}
-.bp-text-block {
 }
 
 .bp-title {
