--- a/src/Components/profile/profile.css
+++ b/src/Components/profile/profile.css
@@ -32,9 +32,9 @@
   position: absolute;
   bottom: 0;
   left: 120px;
+  right: 0;
   display: flex;
   gap: 5px;
   padding-top: 10px;
-  width: 100%;
   justify-content: center;
 }
