SCHED-34 user page multiple changes - the button for creating a group was removed - the version is now at the bottom right of this page - generic input on the number tab replaced by a blockInput for design

--- a/src/Pages/user-page/user-page.css
+++ b/src/Pages/user-page/user-page.css
@@ -15,3 +15,11 @@
   left: 20px;
   right: 20px;
 }
+.version-seeker{
+  font-size: 12px;
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  color: var(--eerieBlack);
+  opacity: .8;
+}
