SCHED-34 labels now have a fontfamily like paragraphs

--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -23,6 +23,7 @@ textarea {
   src: local("Roboto-Regular"), url(../Fonts/Roboto-Regular.ttf) format("truetype");
 }
 
+label,
 p {
   font-family: "Regular";
   transition: 200ms;
