--- a/src/Components/buttons/small-icon-button/small-icon-button.css
+++ b/src/Components/buttons/small-icon-button/small-icon-button.css
@@ -6,9 +6,19 @@
   gap: 5px;
   padding-inline: 5px;
   background-color: var(--frenchGray);
+  border-radius: 2px;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
 }
 
+
+
 .sib-icon {
-  height: 18px;
-  width: 18px;
+  height: 16px;
+  width: 16px;
+}
+.sib-title{
+  color: var(--eerieBlack);
+  opacity: .8;
+  font-size: 14px;
+
 }
