--- a/src/Components/headers/simple-header/simple-header.css
+++ b/src/Components/headers/simple-header/simple-header.css
@@ -2,7 +2,13 @@
   background-color: var(--platinum);
   width: 100%;
   height: 50px;
+
+  /* For Centralizing the title */
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.sh-title {
+  font-size: 24px;
 }
